Change log for zeit.web
=======================

2.36 (unreleased)
-----------------

- ZON-2469: Embed favourite content into author profile page


2.35 (2015-12-08)
-----------------

- DEV-968: Distribute new Webtrekk script

- ZON-2446: Implement HTML for Instant Articles

- ZON-2478: Implement RSS feed for Instant Articles

- ZON-2460: Fix several problems for wrapper apps

- ZON-2450: Add more advertorials to navigation

- ZON-2449: Include kicker in title of socialflow feeds

- MAINT: Cleanup community notifications

- FIX: Be more defensive in several places:
  * Portraitboxes with funny HTML
  * Images with empty copyright
  * Videos without still image

- ZON-2474: Make comments per user available in zeit.web

- ZON-2463: Style Autorenseitenheader


2.34 (2015-12-04)
-----------------

- HOTFIX: Fix lineage test

- MAINT: Use `requests` throughout, no more `urllib2.urlopen`

- PERF: Disable `requests` trying to read credentials from `~/.netrc`,
  saving quite a few superfluous disk accesses

- ZON-2408: Add overscroll effect

- ZON-2380: Trigger adreload in slideshows on every possible slide event

- MAINT: Polish nextread, advertising nextread and article lineage

- HOTFIX: Handle non-ascii author names in author feed

- ZON-2462: Connect friedbert to new author object

- MAINT: Use time-based caching for video series source

- FIX: Re-add zett and zmo teaser kicker modifier


2.33 (2015-11-27)
-----------------

- ZON-2352: Add liveglog teaser icon

- ZON-2357: Add Supertitle to Article Lineage

- ZON-2415: Add Zett Banner

- ZON-2355: Hide chronological article navigation covering fullwidth elements

- ZON-2369: Mark comments by freelancer

- ZON-2418: Update webtrekk page parameter 10

- ZON-2354: Remove vertical spacing of regions where unneeded

- ZON-2445: Change twitter shares to mostread in ZMO buzzboard

- MAINT: Add noindex header to XHR views (just to be on the safe side)

- MAINT: Polish nextread, advertising nextread and article lineage

