@@ -154,3 +154,6 @@
 @import "modules/storystream/atom"
 // storystream-teaser on CP
 @import "modules/storystream/teaser/teaser-storystream"
+
+// links in tab-style (used on author ptofile pages)
+@import "modules/tabbar"
